--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-test
+ <style>
+   body, html {
+  height: 100%;
+}
+
+.bg {
+  /* The image used */
+  background-image: url("image.png");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>
